fix: update layout spacing in App component and enhance styles for improved visual consistency; add About component and blog link in content

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,33 +21,32 @@
 }
 
 .shadow-effect-offset::after {
-  top: -6px !important;
-  /* left: -6px !important; */
+  top: -0.5rem !important;
 }
 
 .shadow-effect::after {
   content: "";
   height: 100%;
-  width: calc(100% - 12px);
+  width: calc(100% - 1rem);
   position: absolute;
   background-color: var(--color-dusty-grape);
   z-index: -1;
   top: 0;
-  left: 6px;
-  border-radius: 24px;
+  left: 0.5rem;
+  border-radius: 1.5rem;
 }
 
 .backdrop-glass {
   background: rgba(0, 0, 0, 0.15);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 24px;
+  border-radius: 1.5rem;
   position: relative;
   z-index: 0;
 }
 
 .backdrop-glass-offset {
-  backdrop-filter: blur(1px) !important;
-  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(0.125rem) !important;
+  -webkit-backdrop-filter: blur(0.125rem);
 }
 
 .backdrop-glass::before {
@@ -62,7 +61,7 @@
   bottom: 0;
   opacity: 0.2;
   z-index: -1;
-  border-radius: 24px;
+  border-radius: 1.5rem;
 }
 
 .button-glass {
@@ -71,8 +70,8 @@
 }
 
 .button-glass:hover {
-  backdrop-filter: blur(24px) !important;
-  -webkit-backdrop-filter: blur(1px);
+  backdrop-filter: blur(1.5rem) !important;
+  -webkit-backdrop-filter: blur(1.5rem);
 }
 
 .button-shadow::after {
@@ -87,6 +86,6 @@
 }
 
 .button-shadow:hover::after {
-  width: calc(100% - 12px);
-  transform: translateY(-6px) translateX(6px);
+  width: calc(100% - 1rem);
+  transform: translateY(-0.5rem) translateX(0.5rem);
 }
